--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -418,58 +418,82 @@
     padding: 16px;
     text-align: center;
     height: auto;
-    gap: 53px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
     /* box-shadow: 0px 2px 5px rgba(0, 0, 0, .2); */
     background: #f5f5f5;
     border-radius: 3px;
   }
 
-  .cards-ofertas {
-    max-width: 1100;
-    margin: 0 auto;
-    padding: 0 10px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    transition: .3s;
-  }
-
-  .cards-container h2 {
+  
+  .cardsContainer h2 {
+    text-align: center;
     margin-top: 10px;
     font-size: 35px;
     font-weight: 700;
   }
 
-  .card {
-    width: 240px;
-    height: 350px;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 5px;
-    /* background: linear-gradient(to left, rgb(189, 136, 231), rgb(169, 154, 245), rgb(136, 211, 224)); */
-    border: solid 1px #a8a8a8;
-    margin-bottom: 10px;
-    transition: .5s;
+  .cards {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    gap: 30px;
+    margin-top: 16px;
+    }
+  div {
     place-content: center;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
   }
 
+  .card {
+    width: 230px;
+    height: 350px;
+    padding: 5px;
+    border-radius: 5px;
+    background: #f5f5f5;
+    /* background: linear-gradient(to left, rgb(189, 136, 231), rgb(169, 154, 245), rgb(136, 211, 224)); */
+    border: solid 1px #a8a8a8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+    transition: .5s;
+  }
+  .card_text{
+    text-align: center;
+    width: 200px;
+    height: 200px;
+    display: block; 
+  }
+  .card p {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.6;
+    letter-spacing: 1px;
+    text-align: center;
+    font-size: 14px;
+  }
   .card:hover {
     transform: scale(1.1);
     box-shadow: 0px 10px 18px rgba(0, 0, 0, .2);
   }
 
   .card img {
-    font-family: 'Poppins', sans-serif;
-    width: 220px;
+    width: 150px;
+    height: 150px;
     border-radius: 5px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+    object-fit: contain;
+
   }
 
   .card p span {
+    font-family: 'Roboto', sans-serif;
     color: #346add;
     font-size: 20px;
     font-weight: 700;
@@ -551,6 +575,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    object-fit: cover;
     color: #0a0330;
     text-align: center;
     text-transform: uppercase;
@@ -559,6 +584,20 @@
     border-radius: 4px;
     display: flex;
     justify-content: center;
+  }
+  .cardGaming {
+    background: none;
+    text-align: right;
+    color: #0a0330;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+  }
+
+  .cardGaming img {
+    width: 300px;
+    transform: rotate(45deg);
   }
   .hogar {
     max-width: 1200px;
