--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -554,12 +554,13 @@
     margin-bottom: 80px;
   }
 
-  .experiencia .card-experiencias {
-    width: 100%;
+   .card-experiencias {
+    max-width: 1200px;
     margin: 0 auto;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
   }
 
@@ -567,11 +568,12 @@
     box-sizing: border-box;
     border: 1px solid #dbdae3;
     width: 280px;
-    height: 100%;
+    height: auto;
     padding: 10px;
     transition: .3s;
     border-radius: 4px;
     margin: 2px;
+    
   }
 
   .experiencia .card-experiencias .cardE p {
@@ -579,14 +581,27 @@
     text-align: center;
   }
 
-  .experiencia .card-experiencias .cardE p span {
+  .cardE  span {
+    font-family: 'Poppins', sans-serif;
     color: #346add;
     font-weight: 700;
+    font-size: 16;
+
 
   }
+  .experiencia .card-experiencias .cardE .card__img{
+    max-width: 280px;
+    margin: 0 auto;
+    width: 100%;
+    height: 150px;
+    margin-top: 0;
+    overflow: hidden;
+    border-radius: 5px;
+    margin-bottom: 15px;
+  }
 
-  .experiencia .card-experiencias .cardE button {
-    width: 90%;
+  .cardE button {
+    width: 200px;
     height: 30px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
