--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,8 @@
     align-items: center;
   }
 
+  /* */
+
   .header-topper a {
     margin: 0 auto;
     color: #f5f5f5;
@@ -78,14 +80,14 @@
     margin: 0 auto;
     width: 100%;
     display: flex;
-    justify-content: space-around ;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 80px;
     background: #000;
     padding: 15px;
   }
-  
+
   #header-container .logo {
     display: flex;
     justify-content: center;
@@ -136,49 +138,67 @@
     font-weight: 700;
     border: solid .5px #f5f5f5;
   }
-  
-  #nav-list {
-  position: fixed;
-  top: 110px;
-  right: 0;
-  width: 300px;
-  height: 100vh;
-  margin-right: -100%;
-  background-color:#000;
-  z-index: 998;
-  transition: all .3s linear;
-  border-bottom: 1px solid #060120;
-  box-shadow: 0px 3px 5px 3px #060120;
 
+  #nav-list {
+    max-width: 1200px;
+    margin: 0 auto;
+    position: fixed;
+    top: 110px;
+    right: 0;
+    width: 300px;
+    height: 100vh;
+    margin-right: -100%;
+    background-color: #000;
+    z-index: 998;
+    transition: all .3s linear;
+    border-bottom: 1px solid #060120;
+    box-shadow: 0px 3px 5px 3px #060120;
+
+  }
+
+
+@media (min-width: 1200px) {
+  #nav-list {
+    width: 600px;
+    height: 100vh;
+    margin-right: -100%;
+
+    }
 }
-.nav-links  a {
-  width: 90%;
-  margin:  0 auto;
-  display: flex;
-  align-items: center;
-  line-height: 1.6;
-  font-family: 'Poppins', sans-serif;
-  text-decoration: none;
-  color: #f5f5f5;
-  font-size: 16px;
-  text-align: left;
-  padding: 10px;
-  gap: 10px;
-  transition: all .2s ;
-}
-.nav-links  a i {
-  font-size: 15px;
-}
-.nav-links  a:hover {
-  font-weight: 700;
-  color: transparent;
+
+
+  .nav-links a {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    line-height: 1.6;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    color: #f5f5f5;
+    font-size: 16px;
+    text-align: left;
+    padding: 10px;
+    gap: 10px;
+    transition: all .2s;
+  }
+
+  .nav-links a i {
+    font-size: 15px;
+  }
+
+  .nav-links a:hover {
+    font-weight: 700;
+    color: transparent;
     background: linear-gradient(to right, rgb(185, 100, 255), rgb(103, 74, 255), rgb(12, 204, 238));
     -webkit-background-clip: text;
-    
+
   }
-#nav-list.show{
-  margin-right: 0;
-}
+
+  #nav-list.show {
+    margin-right: 0;
+  }
+
   /*  */
   #main-container {
     max-width: 1200px;
@@ -186,7 +206,7 @@
     place-content: center;
   }
 
-  .shortcuts__menu {
+  .buscador-productos  {
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
@@ -197,7 +217,89 @@
     margin-bottom: 30px;
     place-content: center;
   }
+  #search-form{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    padding: 15px;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+  }
+  .searchCrad {
+    width: 220px;
+    height: 300px;
+    color: #0f0f0f;
+    margin: 5px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    column-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Poppins',sans-serif;
+    border:solid 1px #0f0f0f;
+  }
 
+  .searchCrad .search-result__img{
+    max-width: 180px;
+    margin: 0 auto;
+    width: 80%;
+    height: 100px;
+    overflow: hidden;
+    border-radius: 5px;
+
+  }
+  #product-search{
+    width: 60%;
+    height: 30px;
+    padding: 5px;
+    margin: 5px;
+  }
+  .btn-buscar{
+    width: 50px;
+    height: 30px;
+    background: #212121;
+    background-image: url(/assets/img/magnifying-glass-solid.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #a8a8a8;
+    margin: 5px;
+  }
+  #categorias {
+    width: 100%;
+    margin: 0 auto;
+    height: 40px;
+    display: flex;
+    color: #0f0f0f;
+    margin: 5px;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    
+  }
+  #search-container{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  #categorias span{
+    height: 30px;
+    text-align: center;
+    text-decoration: none;
+    padding: 5px;
+    line-height: 1.6;
+    color: #212121;
+    font-family: 'Poppins', sans-serif;
+    border-right: solid 1px #0d0d0d;
+    font-weight: 400;
+    user-select: none;
+  }
+/* 
   .shortcuts__menu ul {
     width: 100%;
     margin: 0 auto;
@@ -207,10 +309,10 @@
     justify-content: space-between;
     align-items: center;
     place-content: center;
-    
-  }
 
-  .shortcuts__menu ul li {
+  } */
+
+  /* .shortcuts__menu ul li {
     max-width: 30px;
     margin: 0 auto;
     width: 100%;
@@ -223,7 +325,7 @@
     line-height: 1.6;
     letter-spacing: 1px;
     font-family: 'Roboto', sans-serif;
-    
+
   }
 
   .shortcuts__menu ul li i {
@@ -232,7 +334,7 @@
     color: #346add;
   }
 
-  .shortcuts__menu ul li  a {
+  .shortcuts__menu ul li a {
     margin: 0 auto;
     color: #373838;
     padding: 0;
@@ -245,33 +347,39 @@
     gap: 15px;
 
   }
-
+ */
 
   @media (max-width:992px) {
-    *{
+    * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       place-content: center;
-      
+
     }
-    header{
+
+    header {
       width: 100%;
     }
-    header .header-topper { 
+
+    header .header-topper {
       display: none;
     }
+
     #header-container {
       top: 0;
     }
+
     #nav-list {
       top: 80px;
     }
-    .nav-links a{
-  
+
+    .nav-links a {
+
       justify-content: flex-start;
-      
+
     }
+
     .shortcuts__menu ul li {
       width: 100%;
       height: 35px;
@@ -306,14 +414,15 @@
     }
 
   }
-  #hero-container{
+
+  #hero-container {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 500px;
     background-image: url(../productos/hogar/stanley_termo1.jpg);
-    background-position:center;
-    background-size:cover;
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
@@ -325,17 +434,18 @@
     color: #f5f5f5;
     text-align: center;
   }
+
   .hero-promo {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 22, 40, .45);
-    
+
 
   }
-  
+
   #hero-container .hero-promo h2 {
     width: 100%;
-    margin: 0  auto;
+    margin: 0 auto;
     font-family: 'Roboto', sans-serif;
     text-align: center;
     color: #f5f5f5;
@@ -363,9 +473,10 @@
     color: #346add;
     font-weight: 600;
   }
-  .hero-promo  button{
+
+  .hero-promo button {
     background-color: #346add;
-    color: #fff;  
+    color: #fff;
     width: 80px;
     height: 35px;
     border: none;
@@ -376,15 +487,16 @@
     margin: 15px;
     transition: .3s;
   }
-  .btns-container{
+
+  .btns-container {
     margin: 0 auto;
-    display: flex;  
+    display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 90%;
     left: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
   }
 
   .hero-promo button:hover {
@@ -392,25 +504,28 @@
     scale: 1.05; */
     transform: scale(1.1);
     font-weight: 700;
-    
+
   }
-  .hero-promo  i {
+
+  .hero-promo i {
     color: #346add;
     transition: all .3s;
     cursor: pointer;
   }
-  .hero-promo i:hover{
+
+  .hero-promo i:hover {
     transform: scale(1.1);
   }
-  .hero-promo  i:nth-child(1) {
+
+  .hero-promo i:nth-child(1) {
     margin-right: 10px;
-    }
-    .hero-promo  i:nth-child(2) {
-      margin-left: 10px;
-      } 
+  }
+
+  .hero-promo i:nth-child(2) {
+    margin-left: 10px;
+  }
 
   /* Cards */
-
   .cards-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -426,12 +541,14 @@
     background: #f5f5f5;
     border-radius: 3px;
   }
-  .cardsContainer{
+
+  .cardsContainer {
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
     display: block;
   }
+
   .cardsContainer h2 {
     text-align: center;
     margin-top: 10px;
@@ -445,21 +562,38 @@
     display: flex;
     justify-items: center;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
     margin-top: 16px;
-    }
-    @media (max-width:576px){
-      .cards-container {
-        max-width: 576px;
-        width: 100%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+  }
 
-      }
+  .card__button .button {
+    width: 300px;
+    height: 30px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    background-color: #0a0330;
+    border-radius: 4px;
+    color: #f5f5f5;
+    font-weight: 700;
+    cursor: pointer;
+    border: none;
+    text-transform: uppercase;
+    padding: 5px;
+  }
+
+  @media (max-width:576px) {
+    .cards-container {
+      max-width: 576px;
+      width: 100%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
     }
+  }
+
   .button-add {
     width: 100px;
     height: 40px;
@@ -476,19 +610,18 @@
     background: #f5f5f5;
     border: solid 1px #a8a8a8;
     display: block;
-    /*     display: flex;
-    flex-direction: column; */
     align-items: center;
     justify-content: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     transition: .5s;
     position: relative;
   }
-  .card_text{
+
+  .card_text {
     text-align: center;
     width: 100%;
-    height: 200px;
-    display: block; 
+    height: 100px;
+    display: block;
     font-size: 16px;
     font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
@@ -498,6 +631,7 @@
     justify-content: center;
 
   }
+
   .card p {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
@@ -505,10 +639,12 @@
     text-align: center;
     font-size: 14px;
   }
+
   .card:hover {
     transform: scale(1.1);
     box-shadow: 0px 10px 18px rgba(0, 0, 0, .2);
   }
+
   .card__img {
     max-width: 280px;
     margin: 0 auto;
@@ -519,6 +655,7 @@
     border-radius: 5px;
     margin-bottom: 15px;
   }
+
   .card__img img {
     width: 100%;
     border-radius: 5px;
@@ -555,9 +692,7 @@
     margin-bottom: 30px;
   }
 
-   
-
-  .experiencia  .cardE {
+  .experiencia .cardE {
     border: 1px solid #dbdae3;
     width: 280px;
     height: 300px;
@@ -571,8 +706,6 @@
     margin-bottom: 20px;
     background: #fff;
     box-shadow: 0px 2px 5px #dbdae3;
-    gap: 10px;
-    
   }
 
   .experiencia .cardE .cardE__text {
@@ -586,13 +719,14 @@
     margin-bottom: 5px;
   }
 
-  .cardE  span {
+  .cardE span {
     font-family: 'Poppins', sans-serif;
     color: #346add;
     font-weight: 700;
     font-size: 16;
   }
-  .experiencia .cardE .card__img{
+
+  .experiencia .cardE .card__img {
     max-width: 280px;
     margin: 0 auto;
     width: 100%;
@@ -603,10 +737,12 @@
     margin-bottom: 15px;
     transition: .3s;
   }
-  .cardE .card__img:hover{
+
+  .cardE .card__img:hover {
     transform: scale(1.1);
     overflow: visible;
   }
+
   .cardE button {
     width: 200px;
     height: 30px;
@@ -640,6 +776,7 @@
     display: flex;
     justify-content: center;
   }
+
   .cardGaming {
     background: none;
     text-align: right;
@@ -654,6 +791,7 @@
     width: 300px;
     transform: rotate(45deg);
   }
+
   .hogar {
     max-width: 1200px;
     margin: 0 auto;
@@ -672,17 +810,18 @@
     display: flex;
     justify-content: center;
   }
-  
+
   #gaming-content {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 22, 40, .45 );
+    background-color: rgba(0, 22, 40, .45);
     border-radius: 4px;
     position: relative;
   }
-  .gaming h2{
+
+  .gaming h2 {
     color: #f5f5f5;
     text-align: center;
     text-transform: uppercase;
@@ -699,11 +838,12 @@
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 22, 40, .45 );
+    background-color: rgba(0, 22, 40, .45);
     border-radius: 4px;
     position: relative;
   }
-  .hogar h2{
+
+  .hogar h2 {
     color: #f5f5f5;
     text-align: center;
     text-transform: uppercase;
@@ -711,14 +851,14 @@
     font-weight: 700;
     position: absolute;
     z-index: 3;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
-  
+
   .celulares {
     max-width: 1200px;
     margin: 0 auto;
-    height: 500px;  
+    height: 500px;
     position: relative;
     background-image: url(/assets/productos/Celulares/s22Ultrawallppr.jpg);
     background-repeat: no-repeat;
@@ -730,7 +870,8 @@
     display: flex;
     justify-content: center;
   }
-  .celulares h2{
+
+  .celulares h2 {
     color: #f5f5f5;
     text-align: center;
     text-transform: uppercase;
@@ -741,12 +882,13 @@
     position: absolute;
     z-index: 3;
   }
+
   .celulares-content {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 22, 40, .6 );
+    background-color: rgba(0, 22, 40, .6);
     border-radius: 8px;
     z-index: 2;
   }
@@ -826,11 +968,12 @@
   .footer .box {
     margin: 20px;
   }
-  @media (max-width:768px){
-    .footer{
+
+  @media (max-width:768px) {
+    .footer {
       margin: 0 auto;
       width: 100%;
-      height:100vh;
+      height: 100vh;
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       justify-content: center;
@@ -839,6 +982,7 @@
       line-height: 1.2;
     }
   }
+
   .end-footer {
     background-color: #212121;
     color: #f5f5f5;
