--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -277,10 +277,20 @@
     justify-content: center;
     align-items: center;
     margin: 5px;
-    
+  }
+  @media (max-width:992px){
+    #categorias{
+      margin: 0 auto;
+      width: 100%;
+      display:grid;
+      grid-auto-flow: column;
+      margin: 15px;
+      justify-items: center;
+      align-content: center;
+    }
   }
   #search-container{
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -290,7 +300,6 @@
   #categorias span{
     height: 30px;
     text-align: center;
-    text-decoration: none;
     padding: 5px;
     line-height: 1.6;
     color: #212121;
