--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -268,6 +268,8 @@
     margin: 5px;
   }
   #categorias {
+    max-width: 1100px;
+    margin: 0 auto;
     width: 100%;
     margin: 0 auto;
     height: 40px;
@@ -290,6 +292,8 @@
     }
   }
   #search-container{
+    max-width: 1200px;
+    margin: 0 auto;
     width: 100%;
     margin: 0 auto;
     display: flex;
