--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -218,13 +218,13 @@
     place-content: center;
   }
   #search-form{
+    max-width: 1200px;
+    margin:0 auto;
     width: 100%;
-    margin: 0 auto;
     display: flex;
     padding: 15px;
     justify-content: center;
     align-items: center;
-    margin: 10px;
   }
   .searchCrad {
     width: 220px;
@@ -267,10 +267,8 @@
     color: #a8a8a8;
     margin: 5px;
   }
-  #categorias {
+  ol #categorias {
     max-width: 1100px;
-    margin: 0 auto;
-    width: 100%;
     margin: 0 auto;
     height: 40px;
     display: flex;
