--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    /* border: solid 1px red; */
 
   }
 
@@ -37,6 +38,7 @@
   }
 
   header {
+    width: 100vw;
     background-color: #000;
     border-bottom: 2px solid #060120;
     box-shadow: 0px 5px 15px #060120;
@@ -80,7 +82,7 @@
     margin: 0 auto;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 80px;
@@ -92,6 +94,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
   }
 
   #header-container .logo h1 {
@@ -130,6 +133,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: all .2s;
+    margin-right: 15px;
   }
 
   .button-menu:hover {
@@ -139,7 +143,7 @@
     border: solid .5px #f5f5f5;
   }
 
-  #nav-list {
+  /* #nav-list {
     max-width: 1200px;
     margin: 0 auto;
     position: fixed;
@@ -154,10 +158,25 @@
     border-bottom: 1px solid #060120;
     box-shadow: 0px 3px 5px 3px #060120;
 
-  }
+  } */
+  #nav-list {
+    /* max-width: 1200px; */
+    margin: 0 auto;
+    position: fixed;
+    top:111px;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    margin-right: -110%;
+    background-color: #000;
+    z-index: 998;
+    transition: all .3s linear;
+    border-bottom: 1px solid #060120;
+    box-shadow: 0px 3px 5px 1px #060120;
+}
 
 
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
   #nav-list {
     width: 600px;
     height: 100vh;
@@ -165,7 +184,7 @@
 
     }
 }
-
+ */
 
   .nav-links a {
     width: 90%;
@@ -218,13 +237,13 @@
     place-content: center;
   }
   #search-form{
-    max-width: 1200px;
-    margin:0 auto;
+    max-width: 1100px;
+    margin: 0 auto;
     width: 100%;
     display: flex;
-    padding: 15px;
     justify-content: center;
     align-items: center;
+    
   }
   .searchCrad {
     width: 220px;
@@ -267,27 +286,16 @@
     color: #a8a8a8;
     margin: 5px;
   }
-  ol #categorias {
+  #categorias {
     max-width: 1100px;
     margin: 0 auto;
+    width: 100%;
     height: 40px;
     display: flex;
     color: #0f0f0f;
     margin: 5px;
     justify-content: center;
     align-items: center;
-    margin: 5px;
-  }
-  @media (max-width:992px){
-    #categorias{
-      margin: 0 auto;
-      width: 100%;
-      display:grid;
-      grid-auto-flow: column;
-      margin: 15px;
-      justify-items: center;
-      align-content: center;
-    }
   }
   #search-container{
     max-width: 1200px;
@@ -310,67 +318,18 @@
     font-weight: 400;
     user-select: none;
   }
-/* 
-  .shortcuts__menu ul {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    place-content: center;
-
-  } */
-
-  /* .shortcuts__menu ul li {
-    max-width: 30px;
-    margin: 0 auto;
-    width: 100%;
-    height: 30px;
-    list-style: none;
-    column-gap: 2rem;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    line-height: 1.6;
-    letter-spacing: 1px;
-    font-family: 'Roboto', sans-serif;
-
-  }
-
-  .shortcuts__menu ul li i {
-    margin: 0 auto;
-    font-size: 25px;
-    color: #346add;
-  }
-
-  .shortcuts__menu ul li a {
-    margin: 0 auto;
-    color: #373838;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    text-decoration: none;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-
-  }
- */
 
   @media (max-width:992px) {
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      place-content: center;
+      place-content: center;      
 
     }
 
     header {
-      width: 100%;
+      width:100vw;
     }
 
     header .header-topper {
@@ -391,30 +350,15 @@
 
     }
 
-    .shortcuts__menu ul li {
-      width: 100%;
-      height: 35px;
+    .hero-container {
+      max-width: 100vw;
       margin: 0 auto;
-      padding: 0;
-      font-size: 12px;
+      justify-content: center;
+      align-items: center;
+      position: relative;
       text-align: center;
-    }
 
-    .shortcuts__menu ul li a {
-      margin: 0 auto;
-      padding: 0;
-      font-size: 12px;
-      text-align: center;
     }
-
-    .shortcuts__menu ul li i {
-      font-size: 20px;
-    }
-
-    .shortcuts__menu {
-      place-content: center;
-    }
-
     .footer {
       width: 100%;
       height: 80px;
@@ -427,9 +371,10 @@
   }
 
   #hero-container {
-    margin: 0;
+    max-width: 1200px;
+    margin: 0 auto;
     padding: 0;
-    width: 100%;
+    width: 100vw;
     height: 500px;
     background-image: url(../productos/hogar/stanley_termo1.jpg);
     background-position: center;
@@ -447,6 +392,7 @@
   }
 
   .hero-promo {
+    
     width: 100%;
     height: 100%;
     background-color: rgb(0, 22, 40, .45);
