--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -281,11 +281,11 @@
   #categorias {
     max-width: 1100px;
     margin: 0 auto;
-    width: 100%;
+    width: 100vw;
     height: 40px;
     display: flex;
     color: #0f0f0f;
-    margin: 5px;
+    margin: 10px;
     justify-content: center;
     align-items: center;
   }
@@ -319,7 +319,13 @@
       place-content: center;      
 
     }
+    #nav-list {
+      width: 100vw;
+    }
+    #categorias{
+      width: 100vw;
 
+    }
     header {
       width:100vw;
     }
@@ -540,6 +546,13 @@
       justify-content: center;
       align-items: center;
 
+    }
+    #categorias{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 5px;
     }
   }
 
