--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,7 @@
   a {
     text-decoration: none;
   }
+
   p {
     font-family: 'Robot', sans-serif;
   }
@@ -149,7 +150,7 @@
   #nav-list {
     margin: 0 auto;
     position: fixed;
-    top:111px;
+    top: 111px;
     right: 0;
     width: 50vw;
     height: 100vh;
@@ -159,18 +160,8 @@
     transition: all .3s linear;
     border-bottom: 1px solid #060120;
     box-shadow: 0px 3px 5px 1px #060120;
-}
+  }
 
-
-/* @media (min-width: 1200px) {
-  #nav-list {
-    width: 600px;
-    height: 100vh;
-    margin-right: -100%;
-
-    }
-}
- */
 
   .nav-links a {
     width: 90%;
@@ -211,7 +202,7 @@
     place-content: center;
   }
 
-  .buscador-productos  {
+  .buscador-productos {
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
@@ -222,12 +213,14 @@
     margin-bottom: 30px;
     place-content: center;
   }
+
   .alineaBusqueda {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  #search-form{
+
+  #search-form {
     max-width: 1100px;
     margin: 0 auto;
     width: 100%;
@@ -235,8 +228,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
   }
+
   .searchCrad {
     width: 220px;
     height: 300px;
@@ -249,11 +243,25 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: 'Poppins',sans-serif;
-    border:solid 1px #0f0f0f;
+    font-family: 'Poppins', sans-serif;
+    border: solid 1px #0f0f0f;
   }
 
-  .searchCrad .search-result__img{
+  .searchCrad .cardE_Btn {
+    width: 200px;
+    height: 30px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    background-color: #0a0330;
+    border-radius: 4px;
+    color: #f5f5f5;
+    font-weight: 700;
+    cursor: pointer;
+    border: none;
+    text-transform: uppercase;
+  }
+
+  .searchCrad .search-result__img {
     max-width: 180px;
     margin: 0 auto;
     width: 80%;
@@ -262,13 +270,15 @@
     border-radius: 5px;
 
   }
-  #product-search{
+
+  #product-search {
     width: 60%;
     height: 30px;
     padding: 5px;
     margin: 5px;
   }
-  .btn-buscar{
+
+  .btn-buscar {
     width: 50px;
     height: 30px;
     background: #212121;
@@ -277,6 +287,13 @@
     background-position: center;
     color: #a8a8a8;
     margin: 5px;
+  }
+  #categortias-btns button {
+    border: none;
+    background: none;
+    border-right: #000 solid 1px;
+    padding: 5px;
+    cursor: pointer;
   }
   #categorias {
     max-width: 1100px;
@@ -289,7 +306,8 @@
     justify-content: center;
     align-items: center;
   }
-  #search-container{
+
+  #search-container {
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
@@ -299,7 +317,8 @@
     flex-wrap: wrap;
     align-items: center;
   }
-  #categorias span{
+
+  #categorias span {
     height: 30px;
     text-align: center;
     padding: 5px;
@@ -316,18 +335,21 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      place-content: center;      
+      place-content: center;
 
     }
+
     #nav-list {
       width: 100vw;
     }
-    #categorias{
+
+    #categorias {
       width: 100vw;
 
     }
+
     header {
-      width:100vw;
+      width: 100vw;
     }
 
     header .header-topper {
@@ -357,6 +379,7 @@
       text-align: center;
 
     }
+
     .footer {
       width: 100%;
       height: 80px;
@@ -368,25 +391,12 @@
 
   }
 
-  #hero-container {
+  /* #hero-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0;
     width: 100vw;
     height: 500px;
-    background-image: url(../productos/hogar/stanley_termo1.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    top: 50px;
-    margin-bottom: 80px;
-    position: relative;
-    color: #f5f5f5;
-    text-align: center;
   }
 
   .hero-promo {
@@ -395,89 +405,64 @@
     height: 100%;
     background-color: rgb(0, 22, 40, .45);
 
-
-  }
-
-  #hero-container .hero-promo h2 {
+  } */
+  .slider {
+    position: relative;
+    max-width: 650px;
+    margin: 0 auto;
     width: 100%;
-    margin: 0 auto;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    color: #f5f5f5;
-    font-size: 30px;
-    margin-top: 20px;
+    overflow: hidden;
+    border-radius: 0.2rem;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.6);
   }
 
-  #hero-container .hero-promo p {
-    width: 300px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    line-height: 1.6;
-    letter-spacing: 1px;
-    background-color: rgb(0, 22, 40, .45);
-    border-radius: 15px;
-    display: block;
-    position: absolute;
-    margin: 25px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  #hero-container .hero-promo p span {
-    color: #346add;
-    font-weight: 600;
-  }
-
-  .hero-promo button {
-    background-color: #346add;
-    color: #fff;
-    width: 80px;
-    height: 35px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: 'Poppins', sans-serif;
-    text-transform: uppercase;
-    margin: 15px;
-    transition: .3s;
-  }
-
-  .btns-container {
-    margin: 0 auto;
+  .slides {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    transition: all 0.5s;
+  }
+
+  .slides img {
+    width: 100%;
+    height: auto;
+  }
+
+  .controls {
     position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
-  .hero-promo button:hover {
-    /* filter: drop-shadow(2px 2px 0px rgb(185, 100, 255)) drop-shadow(2px 2px 0px rgb(103, 74, 255)) drop-shadow(2px 2px 0px rgb(12, 204, 238));
-    scale: 1.05; */
-    transform: scale(1.1);
-    font-weight: 700;
-
-  }
-
-  .hero-promo i {
-    color: #346add;
-    transition: all .3s;
+  .controls button {
+    border: none;
+    padding: 1rem;
+    font-size: 1.5rem;
     cursor: pointer;
   }
-
-  .hero-promo i:hover {
-    transform: scale(1.1);
+  .prev {
+    border-color: 0 5px 5px 0;
+  }
+  .prev,
+  .next {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #f5f5f5;
+    transition: all 0.2s ease;
   }
 
-  .hero-promo i:nth-child(1) {
-    margin-right: 10px;
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.6);
   }
 
-  .hero-promo i:nth-child(2) {
-    margin-left: 10px;
+  
+
+  .next {
+    border-radius: 5px 0 0 5px;
   }
 
   /* Cards */
@@ -502,6 +487,7 @@
     margin: 0 auto;
     width: 100%;
     display: block;
+    margin-top: 40px;
   }
 
   .cardsContainer h2 {
@@ -547,7 +533,8 @@
       align-items: center;
 
     }
-    #categorias{
+
+    #categorias {
       display: flex;
       flex-direction: column;
       justify-content: center;
