--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -318,7 +318,7 @@
     align-items: center;
   }
 
-  #categorias span {
+ /*  #categorias span {
     height: 30px;
     text-align: center;
     padding: 5px;
@@ -329,7 +329,7 @@
     font-weight: 400;
     user-select: none;
   }
-
+ */
   @media (max-width:992px) {
     * {
       margin: 0;
@@ -369,7 +369,7 @@
       justify-content: flex-start;
 
     }
-
+/* 
     .hero-container {
       max-width: 100vw;
       margin: 0 auto;
@@ -378,7 +378,7 @@
       position: relative;
       text-align: center;
 
-    }
+    } */
 
     .footer {
       width: 100%;
@@ -408,18 +408,21 @@
   } */
   .slider {
     position: relative;
-    max-width: 650px;
+    max-width: 976px;
     margin: 0 auto;
     width: 100%;
     overflow: hidden;
     border-radius: 0.2rem;
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.6);
+
   }
 
   .slides {
     display: flex;
     width: 100%;
     transition: all 0.5s;
+    object-position: center;
+    object-fit: cover;
   }
 
   .slides img {
@@ -445,7 +448,7 @@
     cursor: pointer;
   }
   .prev {
-    border-color: 0 5px 5px 0;
+    border-radius: 0 5px 5px 0;
   }
   .prev,
   .next {
