--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -407,12 +407,12 @@
 
   } */
   .slider {
-    position: relative;
-    max-width: 976px;
-    margin: 0 auto;
     width: 100%;
+    position: relative;
+    max-width: 950px;
+    margin: 0 auto;
     overflow: hidden;
-    border-radius: 0.2rem;
+    border-radius: 0.5rem;
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.6);
 
   }
@@ -421,13 +421,12 @@
     display: flex;
     width: 100%;
     transition: all 0.5s;
-    object-position: center;
-    object-fit: cover;
   }
 
   .slides img {
-    width: 100%;
-    height: auto;
+    width:calc(100%-1rem*2);
+    height: auto; 
+    object-fit: cover;
   }
 
   .controls {
